crates/ic-lint/tests/snapshots/ann_template__map_with_both_annotations.snap
---
source: crates/ic-lint/tests/ann_template.rs
expression: test_lint(source)
---
⨯ ann-template: key types cannot be annotated
  @ test.idl:3:10

 2 │ struct Foo {
 3 │     map<@key string, @key long> field;
   │          ˆˆˆ invalid use of annotation
 4 │ };

  ? create a typedef for the key type and apply the annotation there

⨯ ann-template: element types cannot be annotated
  @ test.idl:3:23

 2 │ struct Foo {
 3 │     map<@key string, @key long> field;
   │                       ˆˆˆ invalid use of annotation
 4 │ };

  ? create a typedef for the element type and apply the annotation there
