crates/ic-lint/tests/snapshots/ann_template__map_with_key_annotation.snap
---
source: crates/ic-lint/tests/ann_template.rs
expression: test_lint(source)
---
⨯ ann-template: key types cannot be annotated
  @ test.idl:3:10

 2 │ struct Foo {
 3 │     map<@key string, long> field;
   │          ˆˆˆ invalid use of annotation
 4 │ };

  ? create a typedef for the key type and apply the annotation there
