crates/ic-lint/tests/snapshots/ann_template__nested_sequence_with_annotation.snap
---
source: crates/ic-lint/tests/ann_template.rs
expression: test_lint(source)
---
⨯ ann-template: element types cannot be annotated
  @ test.idl:3:24

 2 │ struct Foo {
 3 │     sequence<sequence<@key long>> field;
   │                        ˆˆˆ invalid use of annotation
 4 │ };

  ? create a typedef for the element type and apply the annotation there
